--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    margin: 0;
+    background-image: url("https://cdn.stocksnap.io/img-thumbs/960w/lucky-dice_X8CPTKKQEX.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 8%;
+}
